--- a/main/hpe_main/CMakeLists.txt
+++ b/main/hpe_main/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(hpe_leap)
+project(hpe_main)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -8,11 +8,8 @@ project(hpe_leap)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  rospy
-  std_msgs
   geometry_msgs
-  message_generation
-  tf
+  rospy
 )
 
 ## System dependencies are found with CMake's conventions
@@ -48,15 +45,12 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * uncomment the generate_messages entry below
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
-#find_package(catkin REQUIRED COMPONENTS
-#  message_generation
-#)
-
 ## Generate messages in the 'msg' folder
-#add_message_files(
+# add_message_files(
 #   FILES
-#   pos.msg
-#)
+#   Message1.msg
+#   Message2.msg
+# )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -73,11 +67,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-   DEPENDENCIES
-   std_msgs
-   geometry_msgs
-)
+# generate_messages(
+#   DEPENDENCIES
+#   geometry_msgs
+# )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -110,11 +103,9 @@ generate_messages(
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES my_publisher
-   CATKIN_DEPENDS rospy geometry_msgs message_runtime tf
+#  LIBRARIES hpe_main
+#  CATKIN_DEPENDS geometry_msgs rospy
 #  DEPENDS system_lib
-#   DEPENDS message_runtime
-   
 )
 
 ###########
@@ -130,7 +121,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/hpe_leap.cpp
+#   src/${PROJECT_NAME}/hpe_main.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -141,7 +132,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/hpe_leap_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/hpe_main_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -205,7 +196,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_my_publisher.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_hpe_main.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
